# brainfuck-agent

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
src/: agent.py  llama.py  memory.py  utils.py
